--- a/src/components/chat-title/ChatTitle.scss
+++ b/src/components/chat-title/ChatTitle.scss
@@ -4,14 +4,14 @@ $chat-title-shadow: darken($accent-color, 75.29);
 
 #chat-title {
   display: grid;
-  grid: 36px / 1fr 36px;
   align-content: center;
+  float: left;
   align-items: center;
   grid-area: chat-title;
   background: $accent-color;
   color: $primary-color;
   font-weight: bold;
-  font-size: 2.0rem;
+  font-size: 1.5rem;
   border-radius: 0 10px 0 0;
   box-shadow: 0 1px 3px -1px $chat-title-shadow;
   padding: 0 20px;
