--- a/src/containers/Dashbaord.scss
+++ b/src/containers/Dashbaord.scss
@@ -5,13 +5,13 @@ $dashboard-background: lighten($accent-color, 65%);
 #chat-container {
   display: grid;
   grid:
-      'search-container chat-title' 71px
+      'channel-title chat-title' 71px
       'channel-list chat-message-list' 1fr
       'new-message-container chat-form' 78px
       / 275px 1fr;
   min-width: 1000px;
-  max-width: 1000px;
-  max-height: 700px;
+  max-width: 1200px;
+  max-height: 800px;
   margin-top: 50px;
   width: 100%;
   height: 95vh;
