--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -3,12 +3,12 @@
 $primary-color: #346e83;
 $accent-color: #EEE;
 
-$contrasted-primary-text: #FFF; // contrast-color($primary-color, lighten($accent-color, 10), darken($accent-color, 10));
-$contrasted-accent-text: #111; // contrast-color($accent-color, lighten($primary-color, 10), darken($primary-color, 10));
+$contrasted-primary-text: #FFF;
+$contrasted-accent-text: #111;
 
 $primary-dark: darken($primary-color, 8%);
-$contrasting-primary-text-color: black; // choose-contrast-color($primary-color);
-$contrasting-accent-text-color: white; // choose-contrast-color($accent-color);
+$contrasting-primary-text-color: black;
+$contrasting-accent-text-color: white;
 
 $shadow-box-color: #000000bf;
 $search-background-image-color: #ffffff4d;
